[E3DB-958] Fleshed out the different fragments, adding buttons, labels, and state to the base fragment. Seems to be working for key-protection-none case.

--- a/androidtest/src/main/res/layout/fragment_base.xml
+++ b/androidtest/src/main/res/layout/fragment_base.xml
@@ -1,14 +1,61 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+              android:orientation="vertical"
              tools:context="com.tozny.e3dbtest.BaseFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
             android:id="@+id/name_label"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/hello_blank_fragment"/>
 
-</FrameLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <Button
+                android:id="@+id/load_config_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/load_config"/>
+
+        <Button
+                android:id="@+id/save_config_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save_config"/>
+
+        <Button
+                android:id="@+id/delete_config_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete_config"/>
+
+        <Button
+                android:id="@+id/new_config_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/new_config"/>
+
+    </LinearLayout>
+
+        <TextView
+                android:id="@+id/error_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/status_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/config_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+</LinearLayout>
