--- a/androidtest/src/main/res/values/colors.xml
+++ b/androidtest/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3DB7B1</color>
+    <color name="colorPrimaryDark">#058C86</color>
+    <color name="colorAccent">#4E73C2</color>
+    <color name="error">#FF0000</color>
+    <color name="darkGray">#555555</color>
+
 </resources>
